--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "monaco-editor": "^0.52.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-notifications": "^1.7.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "tostify": "^0.0.1",
