--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-loading-skeleton": "^3.5.0",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "tostify": "^0.0.1",
     "web-vitals": "^4.2.4"
